--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header {
     justify-content: center;
     background-color: rgb(105, 132, 221);
     color: rgb(255, 255, 255);
-    padding: 3rem;
+    padding: 2rem;
     gap: 2rem;
     text-align: center;
     transition: background-color 0.5s, color 0.5s;
@@ -96,16 +96,17 @@ h1 {
 }
 
 button {
+    display: block;
+    margin: 0 auto 20px;
+    padding: 12px 24px;
     background-color: rgb(105, 132, 221);
     font-family: 'Outfit';
     color: white;
     font-size: 1.1rem;
     border: none;
-    padding: 12px 24px;
     border-radius: 8px;
     cursor: pointer;
     transition: all 0.3s;
-    margin: 0 0 40px 0;
 }
 
 button:hover {
